--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@astrojs/cloudflare": "^12.6.2",
 		"@astrojs/preact": "^4.1.0",
 		"astro": "^5.12.8",
+		"firebase": "^12.1.0",
 		"preact": "^10.22.0",
 		"typescript": "^5.4.5"
 	}
